<resources>
    <string name="app_name">BloctoSDK Example</string>
    <string name="solana_dapp_name">Solana Value Dapp</string>
    <string name="evm_dapp_name">EVM Value Dapp</string>
    <string name="button_paste">Paste</string>
    <string name="button_connect">Connect</string>
    <string name="button_sign">Sign</string>
    <string name="button_send_transaction">Send Transaction</string>
    <string name="button_get_value">Get Value</string>
    <string name="title_set_value">Set Value</string>
    <string name="title_get_value">Value: </string>
    <string name="title_partial_sign">Create Account and Set Value (PartialSign)</string>
    <string name="title_donate">Donate</string>
    <string name="title_sign_message">Sign Message</string>
    <string name="title_send_transaction">Send Transaction</string>
    <string name="title_eth_sign">ETH Sign</string>
    <string name="title_personal_sign">Personal Sign</string>
    <string name="title_type_data_v3">Typed Data v3</string>
    <string name="title_type_data_v4">Typed Data v4</string>
    <string name="title_type_data">Typed Data</string>
    <string name="title_composite_signatures">Composite Signatures</string>
    <string name="default_typed_data_v3">{\"types\":{\"EIP712Domain\":[{\"name\":\"name\",\"type\":\"string\"},{\"name\":\"version\",\"type\":\"string\"},{\"name\":\"chainId\",\"type\":\"uint256\"},{\"name\":\"verifyingContract\",\"type\":\"address\"}],\"Person\":[{\"name\":\"name\",\"type\":\"string\"},{\"name\":\"wallet\",\"type\":\"address\"}],\"Mail\":[{\"name\":\"from\",\"type\":\"Person\"},{\"name\":\"to\",\"type\":\"Person\"},{\"name\":\"contents\",\"type\":\"string\"}]},\"primaryType\":\"Mail\",\"domain\":{\"name\":\"Ether Mail\",\"version\":\"1\",\"chainId\":%1$d,\"verifyingContract\":\"0xCcCCccccCCCCcCCCCCCcCcCccCcCCCcCcccccccC\"},\"message\":{\"from\":{\"name\":\"Cow\",\"wallet\":\"0xCD2a3d9F938E13CD947Ec05AbC7FE734Df8DD826\"},\"to\":{\"name\":\"Bob\",\"wallet\":\"0xbBbBBBBbbBBBbbbBbbBbbbbBBbBbbbbBbBbbBBbB\"},\"contents\":\"Hello, Bob!\"}}</string>
    <string name="default_typed_data_v4">{\"domain\":{\"chainId\":%1$d,\"name\":\"Ether Mail\",\"verifyingContract\":\"0xCcCCccccCCCCcCCCCCCcCcCccCcCCCcCcccccccC\",\"version\":\"1\"},\"message\":{\"contents\":\"Hello, Bob!\",\"from\":{\"name\":\"Cow\",\"wallets\":[\"0xCD2a3d9F938E13CD947Ec05AbC7FE734Df8DD826\",\"0xDeaDbeefdEAdbeefdEadbEEFdeadbeEFdEaDbeeF\"]},\"to\":[{\"name\":\"Bob\",\"wallets\":[\"0xbBbBBBBbbBBBbbbBbbBbbbbBBbBbbbbBbBbbBBbB\",\"0xB0BdaBea57B0BDABeA57b0bdABEA57b0BDabEa57\",\"0xB0B0b0b0b0b0B000000000000000000000000000\"]}]},\"primaryType\":\"Mail\",\"types\":{\"EIP712Domain\":[{\"name\":\"name\",\"type\":\"string\"},{\"name\":\"version\",\"type\":\"string\"},{\"name\":\"chainId\",\"type\":\"uint256\"},{\"name\":\"verifyingContract\",\"type\":\"address\"}],\"Group\":[{\"name\":\"name\",\"type\":\"string\"},{\"name\":\"members\",\"type\":\"Person[]\"}],\"Mail\":[{\"name\":\"from\",\"type\":\"Person\"},{\"name\":\"to\",\"type\":\"Person[]\"},{\"name\":\"contents\",\"type\":\"string\"}],\"Person\":[{\"name\":\"name\",\"type\":\"string\"},{\"name\":\"wallets\",\"type\":\"address[]\"}]}}</string>
    <string name="button_show_signature">Show signature</string>
    <string name="signature">Signature: %1$s</string>
    <string name="is_authorized_signer">isAuthorizedSigner: %1$s</string>
    <string name="rpc_url">RPC url</string>

    <!-- Flow -->
    <string name="flow_dapp_name">Flow Value Dapp</string>
    <string name="button_flow_show_account_proof_data">Show account proof data</string>
</resources>